--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,16 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
-    }
+        "valarray": "cpp",
+        "barrier": "cpp",
+        "cuchar": "cpp",
+        "latch": "cpp",
+        "ranges": "cpp",
+        "scoped_allocator": "cpp",
+        "syncstream": "cpp",
+        "expected": "cpp",
+        "spanstream": "cpp",
+        "stacktrace": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
